--- a/app/views/directors/show.html.erb
+++ b/app/views/directors/show.html.erb
@@ -20,26 +20,74 @@
       <dt>Movie count</dt>
       <dd><%= Movie.where({ :director_id => @director.id}).count %></dd>
 
-    <dt>Filmography</dt>
+      <dt>Filmography</dt>
       <dd>
         <ul>
           <% Movie.where({ :director_id => @director.id}).each do |movie| %>
           <li><%= movie.title %> (<%= movie.year %>)</li>
           <% end %>
         </ul>
-      </dd>
-    </dl>
 
-    <div class="btn-group btn-group-justified">
-      <a href="/directors" class="btn btn-primary">
-        Back
-      </a>
-      <a href="/directors/<%= @director.id %>/edit" class="btn btn-warning">
-        Edit
-      </a>
-      <a href="/delete_director/<%= @director.id %>" class="btn btn-danger" rel="nofollow">
-        Delete
-      </a>
-    </div>
-  </div>
+        <ul>
+         <form action="/create_movie" method="post">
+          <!-- Hidden input for authenticity token to protect from forgery -->
+          <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+          <!-- Label and input for title -->
+          <div class="form-group">
+            <label for="title" class="control-label">
+              Title
+            </label>
+
+            <input type="text" id="title" name="title" placeholder="Title" class="form-control" value="<%= @movie.title %>">
+          </div>
+
+          <!-- Label and input for year -->
+          <div class="form-group">
+            <label for="year" class="control-label">
+              Year
+            </label>
+
+            <input type="text" id="year" name="year" placeholder="Year" class="form-control" value="<%= @movie.year %>">
+          </div>
+
+
+          <!-- Hidden input for director_id -->
+          <div class="form-group">
+           <input type="hidden" id="director_id" name="director_id" placeholder="Director" class="form-control" value="<%= @director.id %>">
+         </div>
+
+         <!-- Hidden input for duration -->
+         <div class="form-group">
+           <input type="hidden" id="duration" name="duration" placeholder="Duration" class="form-control" value="999999">
+         </div>
+
+         <button class="btn btn-success">
+          Create Movie
+        </button>
+        or
+        <a href="/movies">Cancel</a>
+      </form>
+    </ul>
+
+  </dd>
+
+
+
+
+
+</dl>
+
+<div class="btn-group btn-group-justified">
+  <a href="/directors" class="btn btn-primary">
+    Back
+  </a>
+  <a href="/directors/<%= @director.id %>/edit" class="btn btn-warning">
+    Edit
+  </a>
+  <a href="/delete_director/<%= @director.id %>" class="btn btn-danger" rel="nofollow">
+    Delete
+  </a>
+</div>
+</div>
 </div>
